# GenFit

./: .travis.yml  CMakeLists.txt  New branch  README  README.build  README.md  coverage.sh  makeEnv.sh  patch.diff.txt  rootlogon.C
G4eTrackRep/: CMakeLists.txt  DetectorConstruction.cxx  G4GFConv.h  G4eTrackRep.cxx  MagField.cxx  genfitG4eLinkDef.h  testTrackRep2.cxx  testTrackRep2.h
RKTrackRepXY/: CMakeLists.txt  MeanExcEnergy.cxx  RKTrackRepXY.cxx  RKTrackRepXY.h  energyLoss.cxx
test/PullsTest/: CMakeLists.txt  PixHit.cxx  PointHit.cxx  linkdef.h  main.cxx
tool/: CMakeLists.txt  PixHit.cxx  PointHit.cxx  PointHit.h  PseudoSpacePointWireHit.cxx  PseudoSpacePointWireHit.h  WireHit.cxx  WireHit.h  mytoolLinkDef.h
trunk/: CMakeLists.txt  Doxyfile  README  SConstruct  macros.cmake  makeEnv.sh  patch.diff.txt~
trunk/G4eTrackRep/: CMakeLists.txt  DetectorConstruction.cxx  DetectorConstruction.h  G4GFConv.cxx  G4eTrackRep.cxx  G4eTrackRep.h  MagField.h  README
trunk/GBL/include/: BorderedBandMatrix.h  GFGbl.h  GblData.h  GblFitter.h  GblFitterInfo.h  GblTrajectory.h  MyDebugTools.h
trunk/GBL/src/: GBLLinkDef.h  GFGbl.cc  GblData.cc  GblData.cpp  GblFitter.cc  GblFitterInfo.cc  GblTrajectory.cc  MilleBinary.cc
trunk/GFFastKalman/: CMakeLists.txt
trunk/GFRave/: CMakeLists.txt  CMakeLists_panda.txt  CMakeLists_standalone.txt  GFRaveConverters.cxx  GFRaveConverters.h  GFRaveLinkDef.h  GFRaveMagneticField.cxx  GFRaveMagneticField.h  GFRavePropagator.cxx  GFRavePropagator.h  GFRaveTrackParameters.cxx  GFRaveTrackParameters.h  GFRaveVertex.cxx  GFRaveVertex.h  GFRaveVertexFactory.cxx  GFRaveVertexFactory.h  INSTALL_pandaroot.txt  install_rave_pandaroot.sh
trunk/GFRave/include/: GFRaveConverters.h  GFRaveMagneticField.h  GFRavePropagator.h  GFRaveTrackParameters.h  GFRaveVertex.h  GFRaveVertexFactory.h
trunk/GFRave/src/: GFRaveConverters.cc  GFRaveLinkDef.h  GFRaveMagneticField.cc  GFRaveTrackParameters.cc  GFRaveVertexFactory.cc
trunk/GeaneTrackRep2/: CMakeLists.txt  CMakeLists_panda.txt  GeaneMCApplication.cxx  GeaneMCApplication.h  GeaneTrackRep2.h
trunk/LSLtrackRep/: AbsNystromEQM.h  CMakeLists.txt  CMakeLists_panda.txt  LSLEQM.cxx  LSLEQM.h  LSLTrackRep.cxx  LSLTrackRep.h  Nystrom.cxx  VirtSpacePointRecoHit.h  genfitLSLLinkDef.h
trunk/RKTrackRep/: CMakeLists.txt  CMakeLists_panda.txt  CMakeLists_standalone.txt  GFMaterialEffects.cxx  GFMaterialEffects.h  GFPathMat.cxx  GFPointPath.cxx  GFPointPath.h  GFTGeoMaterialInterface.cxx  RKTools.cxx  RKTools.h  RKTrackRep.cxx  RKTrackRep.h  genfitRKLinkDef.h
trunk/RKTrackRepXY/: MeanExcEnergy.cxx  MeanExcEnergy.h  RKTrackRepXY.cxx  energyLoss.cxx  energyLoss.h  genfitRKXYLinkDef.h
trunk/RecoHitExamples/: CMakeLists.txt  PixHit.h  SpacepointHit.cxx  WireHit.cxx  WireHit.h  WirePointHit.h
trunk/SlTrackRep/: CMakeLists.txt  SlTrackRep.cxx  SlTrackRep.h  genfitSlTrackRepLinkDef.h
trunk/config/: SetCuts.C
trunk/core/: CMakeLists_panda.txt  CMakeLists_standalone.txt  GFAbsBField.h  GFAbsFinitePlane.cxx  GFAbsFinitePlane.h  GFAbsFitter.cxx  GFAbsFitter.h  GFAbsRecoHit.cxx  GFAbsRecoHit.h  GFAbsTrackRep.cxx  GFAbsTrackRep.h  GFBookkeeping.cxx  GFBookkeeping.h  GFConstField.cxx  GFConstField.h  GFDaf.cxx  GFDaf.h  GFDafHit.cxx  GFDafHit.h  GFDetPlane.cxx  GFDetPlane.h  GFException.cxx  GFFieldManager.cxx  GFFieldManager.h  GFKalman.cxx  GFKalman.h  GFMaterialEffects.cxx  GFMaterialEffects.h  GFPlanarHitPolicy.cxx  GFPlanarHitPolicy.h  GFPseudoSpacepointWireHitPolicy.cxx  GFPseudoSpacepointWireHitPolicy.h  GFRecoHitFactory.cxx  GFRecoHitFactory.h  GFRecoHitIfc.h  GFRecoHitProducer.h  GFRectFinitePlane.cxx  GFRectFinitePlane.h  GFTools.cxx  GFTools.h  (+12 more)
trunk/core/RecoHits/: GFAbsPlanarHit.cxx  GFAbsPlanarHit.h  GFAbsRecoHit.cxx  GFDafWireHit.cxx
trunk/core/include/: AbsFinitePlane.h  AbsFitter.h  AbsFitterInfo.h  AbsHMatrix.h  AbsMeasurement.h  AbsTrackRep.h  Exception.h  FitStatus.h  MaterialProperties.h  MeasuredStateOnPlane.h  MeasurementFactory.h  MeasurementOnPlane.h  SharedPlanePtr.h  StateOnPlane.h  ThinScatterer.h  Tools.h  Track.h  TrackCand.h  TrackCandHit.h  TrackPoint.h
trunk/core/src/: AbsFitterInfo.cc  AbsTrackRep.cc  DetPlane.cc  Exception.cc  FieldManager.cc  FitStatus.cc  MaterialProperties.cc  MeasuredStateOnPlane.cc  MeasurementOnPlane.cc  StateOnPlane.cc  Tools.cc  Tools.cpp  Track.cc  TrackCand.cc  TrackCandHit.cpp  TrackPoint.cc  coreLinkDef.h
trunk/doc/: Doxyfile.in
trunk/eventDisplay/: GenfitDisplay.cxx  GenfitDisplay.h
trunk/eventDisplay/include/: EventDisplay.h
trunk/eventDisplay/src/: EventDisplay.cc  eventDisplayLinkDef.h
trunk/finitePlanes/include/: RectangularFinitePlane.h
trunk/finitePlanes/src/: RectangularFinitePlane.cc
trunk/fitters/include/: AbsKalmanFitter.h  DAF.h  KalmanFitter.h  KalmanFitterInfo.h  KalmanFitterRefTrack.h  ReferenceStateOnPlane.h
trunk/fitters/src/: AbsKalmanFitter.cc  DAF.cc  KalmanFitStatus.cc  KalmanFittedStateOnPlane.cc  KalmanFitter.cc  KalmanFitterInfo.cc  KalmanFitterRefTrack.cc  ReferenceStateOnPlane.cc  ReferenceStateOnPlane.cpp  fittersLinkDef.h
trunk/geant3/: Makefile  README_gcalor  README_geane  README_geane_more  gcalor_vmc.diff  gcinit.F
trunk/geant3/TGeant3/: G3Material.cxx  G3Material.h  G3Medium.cxx  G3Volume.cxx  G3Volume.h  TCallf77.h  TG3Application.cxx  TGeant3.h  TGeant3TGeo.cxx  TGeant3f77.cxx  TGeant3gu.cxx  geant3LinkDef.h
trunk/geant3/added/: dummies.c  loadmod.F
trunk/geant3/block/: fdnopt.F  fdpree.F  flkdt1.F  flkdt2.F  flkdt3.F  flkdt5.F  flkdt6.F  flkdt7.F
trunk/geant3/cdf/: g321m.c  g321x.cdf
trunk/geant3/cgpack/: cgaffi.F  cgbfit.F  cgbint.F  cgbmmt.F  cgbrik.F  cgbsea.F  cgbsec.F  cgbsor.F  cgbsub.F  cgbtfp.F  cgbttt.F  cgcev.F  cgcopy.F  cgelli.F  cgfac2.F  cgfaco.F  cgfare.F  cgfvis.F  cghdfa.F  cgheva.F  cghins.F  cghpla.F  cghpla.F.ori  cghren.F  cghshi.F  cghtre.F  cginve.F  cgmnmx.F  cgpers.F  cgsaan.F  cgscop.F  (+9 more)
trunk/geometry/: media.C
trunk/tool/: CMakeLists.txt  PixHit.h  PointHit.cxx  PointHit.h  PseudoSpacePointWireHit.cxx  StripHit.cxx  StripHit.h  WirePointHit.cxx  WirePointHit.h
(+2096 files in other folders)
