cmake_minimum_required(VERSION 2.6)


#check for ENV variables that are needed
IF(NOT DEFINED ENV{ROOTSYS})
   MESSAGE(FATAL_ERROR "You did not set the environment variable ROOTSYS. Please check your ROOT configuration.") 
ENDIF(NOT DEFINED ENV{ROOTSYS})
#IF(NOT DEFINED ENV{GENFIT})
#   MESSAGE(FATAL_ERROR "You did not set the environment variable GENFIT.") 
#ENDIF(NOT DEFINED ENV{GENFIT})


INCLUDE_DIRECTORIES(
  $ENV{ROOTSYS}/include
  ${GENFIT}/core
  ${GENFIT}/G4eTrackRep
)


AUX_SOURCE_DIRECTORY(
  $ENV{GENFIT}/G4eTrackRep 
  GENFIT_G4e_SRCS
)

SET(GENFIT_G4e_HEADERS G4eTrackRep.h)

set(GENFIT_G4e_LINKDEF  genfitG4eLinkDef.h)
set(GENFIT_G4e_DICTIONARY genfitG4eDict.cxx) 

FIND_PROGRAM(ROOT_CINT_EXECUTABLE
	NAMES rootcint
	PATHS $ENV{ROOTSYS}/bin
	NO_DEFAULT_PATH)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/${GENFIT_G4e_DICTIONARY}
	COMMAND ${ROOT_CINT_EXECUTABLE}
      	ARGS -f ${CMAKE_BINARY_DIR}/${GENFIT_G4e_DICTIONARY} -c -DHAVE_CONFIG_H  -I${GENFIT}/core -I${GENFIT}/G4eTrackRep
      	${GENFIT_G4e_HEADERS} ${GENFIT_G4e_LINKDEF}
      	DEPENDS ${GENFIT_G4e_HEADERS} ${GENFIT_G4e_LINKDEF})

SET(GENFIT_G4e_SRCS ${GENFIT_G4e_SRCS} ${CMAKE_BINARY_DIR}/${GENFIT_G4e_DICTIONARY})


################ install ###################

#add ROOT lib
Execute_process(COMMAND root-config --glibs --cflags
	OUTPUT_VARIABLE ROOT_LIBS
    	OUTPUT_STRIP_TRAILING_WHITESPACE)



ADD_LIBRARY(genfitG4e SHARED ${GENFIT_G4e_SRCS})
TARGET_LINK_LIBRARIES(genfitG4e ${ROOT_LIBS} -L${GENFITLIBDIR} -lgenfit   -lGeom -lVMC -lEG)
INSTALL(TARGETS genfitG4e DESTINATION ${GENFITLIBINSTALLDIR} )

