cmake_minimum_required(VERSION 2.6)


#check for ENV variables that are needed
IF(NOT DEFINED ENV{ROOTSYS})
   MESSAGE(FATAL_ERROR "You did not set the environment variable ROOTSYS. Please check your ROOT configuration.") 
ENDIF(NOT DEFINED ENV{ROOTSYS})
#IF(NOT DEFINED ENV{GENFIT})
#   MESSAGE(FATAL_ERROR "You did not set the environment variable GENFIT.") 
#ENDIF(NOT DEFINED ENV{GENFIT})


INCLUDE_DIRECTORIES($ENV{ROOTSYS}/include  ${GENFIT}/core ${GENFIT}/RKTrackRepXY)

AUX_SOURCE_DIRECTORY($ENV{GENFIT}/RKTrackRepXY GENFIT_RKXY_SRCS)

SET(GENFIT_RKXY_HEADERS RKTrackRepXY.h)

set(GENFIT_RKXY_LINKDEF  genfitRKXYLinkDef.h)
set(GENFIT_RKXY_DICTIONARY genfitRKXYDict.cxx) 

FIND_PROGRAM(ROOT_CINT_EXECUTABLE
	NAMES rootcint
	PATHS $ENV{ROOTSYS}/bin
	NO_DEFAULT_PATH)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/${GENFIT_RKXY_DICTIONARY}
	COMMAND ${ROOT_CINT_EXECUTABLE}
      	ARGS -f ${CMAKE_BINARY_DIR}/${GENFIT_RKXY_DICTIONARY} -c -DHAVE_CONFIG_H  -I${GENFIT}/core -I${GENFIT}/RKTrackRepXY
      	${GENFIT_RKXY_HEADERS} ${GENFIT_RKXY_LINKDEF}
      	DEPENDS ${GENFIT_RKXY_HEADERS} ${GENFIT_RKXY_LINKDEF})

SET(GENFIT_RKXY_SRCS ${GENFIT_RKXY_SRCS} ${CMAKE_BINARY_DIR}/${GENFIT_RKXY_DICTIONARY})

################ install ###################

#add ROOT lib
Execute_process(COMMAND root-config --glibs --cflags
	OUTPUT_VARIABLE ROOT_LIBS
    	OUTPUT_STRIP_TRAILING_WHITESPACE)



ADD_LIBRARY(genfitRKXY SHARED ${GENFIT_RKXY_SRCS})
TARGET_LINK_LIBRARIES(genfitRKXY ${ROOT_LIBS} -L${GENFITLIBDIR} -lgenfit   -lGeom -lVMC -lEG)
INSTALL(TARGETS genfitRKXY DESTINATION ${GENFITLIBDIR} )

