cmake_minimum_required(VERSION 2.6)


#check for ENV variables that are needed
IF(NOT DEFINED ENV{ROOTSYS})
   MESSAGE(FATAL_ERROR "You did not set the environment variable ROOTSYS. Please check your ROOT configuration.") 
ENDIF(NOT DEFINED ENV{ROOTSYS})
#IF(NOT DEFINED ENV{GENFIT})
#   MESSAGE(FATAL_ERROR "You did not set the environment variable GENFIT.") 
#ENDIF(NOT DEFINED ENV{GENFIT})


INCLUDE_DIRECTORIES($ENV{ROOTSYS}/include  ${GENFIT}/core ${GENFIT}/RKTrackRep ${GENFIT}/tool)


AUX_SOURCE_DIRECTORY($ENV{GENFIT}/tool MYTOOL_SRCS)

SET(MYTOOL_HEADERS PointHit.h StripHit.h)

set(MYTOOL_LINKDEF  mytoolLinkDef.h)
set(MYTOOL_DICTIONARY myToolDict.cxx) 

FIND_PROGRAM(ROOT_CINT_EXECUTABLE
	NAMES rootcint
	PATHS $ENV{ROOTSYS}/bin
	NO_DEFAULT_PATH)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/${MYTOOL_DICTIONARY}
	COMMAND ${ROOT_CINT_EXECUTABLE}
      	ARGS -f ${CMAKE_BINARY_DIR}/${MYTOOL_DICTIONARY} -c -DHAVE_CONFIG_H  -I${GENFIT}/core -I${GENFIT}/tool
      	${MYTOOL_HEADERS} ${MYTOOL_LINKDEF}
      	DEPENDS ${MYTOOL_HEADERS} ${MYTOOL_LINKDEF})

SET(MYTOOL_SRCS ${MYTOOL_SRCS} ${CMAKE_BINARY_DIR}/${MYTOOL_DICTIONARY})


################ install ###################

#add ROOT lib
Execute_process(COMMAND root-config --glibs --cflags
	OUTPUT_VARIABLE ROOT_LIBS
    	OUTPUT_STRIP_TRAILING_WHITESPACE)



ADD_LIBRARY(mytool SHARED ${MYTOOL_SRCS})
TARGET_LINK_LIBRARIES(mytool ${ROOT_LIBS} -L${GENFITLIBDIR} -lgenfit -lgenfitRK  -lGeom -lVMC -lEG)
INSTALL(TARGETS mytool DESTINATION ${GENFITLIBINSTALLDIR} )

